--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -2187,3 +2187,21 @@ Philos Trans A Math Phys Eng Sci. 2011 Apr 13;369(1940):1443-58. doi: 10.1098/rs
    year = {2013},
    type = {Journal Article}
 }
+@article{Bassi1997,
+   author = {Bassi, Francesco and Rebay, Stefano},
+   title = {A high-order accurate discontinuous finite element method for the numerical solution of the compressible Navier–Stokes equations},
+   journal = {Journal of computational physics},
+   volume = {131},
+   number = {2},
+   pages = {267-279},
+   ISSN = {0021-9991},
+   year = {1997},
+   type = {Journal Article}
+}
+@phdthesis{zhuhui,
+            year = {2017},
+           title = {基于通量重构方法的高精度湍流模拟研究},
+          school = {清华大学},
+          author = {朱辉},
+        keywords = {通量重构方法,湍流模拟,隐式大涡模拟,壁面模型,前台阶流动},
+}
