--- a/data/chap05.tex
+++ b/data/chap05.tex
@@ -4,7 +4,7 @@
   \centering
   \subcaptionbox{本文计算结果}[0.45\textwidth] %标题的长度，超过则会换行，如下一个小图。
     {\includegraphics[width=0.45\textwidth]{ch5/VorStru_Nocontrol.jpg}}%
-  \subcaptionbox{Liang Wei 和 Andrew Pollard (2011)\cite{Wei2011}}[0.45\textwidth]
+  \subcaptionbox{Wei和Pollard\cite{Wei2011}计算结果}[0.45\textwidth]
     {\includegraphics[width=0.45\textwidth]{ch5/VorStru_Nocontrol_ref.jpg}}%
   \caption{计算得到涡结构对比}\label{f:nearwallvortex}
 \end{figure}
@@ -12,7 +12,7 @@
   \centering
   \subcaptionbox{本文计算结果}[0.5\textwidth] %标题的长度，超过则会换行，如下一个小图。
     {\includegraphics[width=0.5\textwidth]{ch5/streaks_nocontrol.jpg}}%
-  \subcaptionbox{Liang Wei 和 Andrew Pollard (2011)\cite{Wei2011}}[0.4\textwidth]
+  \subcaptionbox{Wei和Pollard\cite{Wei2011}计算结果}[0.4\textwidth]
     {\includegraphics[width=0.4\textwidth]{ch5/streaks_paper.jpg}}%
   \caption{计算得到条带结构对比}\label{f:nearwallstreak}
 \end{figure}
