--- a/data/chap06.tex
+++ b/data/chap06.tex
@@ -1,17 +1,17 @@
 \chapter{结论与展望}
-本文将大型客机减阻问题分解抽象为三维边界层转捩推迟问题和充分发展槽道减阻问题。并采用介质阻挡放电等离子激发器作为控制手段，提出了新的减阻控制方法。
+本文将大型客机减阻问题分解抽象为三维边界层转捩推迟问题和充分发展槽道减阻问题。并采用介质阻挡放电等离子激发器作为控制手段，提出并分析了新的减阻控制方法。
 
-对于三维边界层转捩推迟问题，本文先研究了后掠Hiemenz流动这一模型流动。该流动是顺压梯度后掠平板的一种特殊情况。针对这种流动，本文提出了在每个展向周期放置一个DBD激发器的谐波激励控制方案。为了得到较优的控制参数，本文推导了基于伴随方程的敏感性分析公式。敏感性分析的结果指出，在低速条带下方，也就是横流涡下方偏下扫的位置处添加正方向的体积力可以抑制扰动的发展，后续的NPSE计算也验证了这一结果。本文同时测试了不同的流向激励位置和不同的激励电压大小，发现都是适中的情况控制效果较好。这表明所添加体积力的强度需要与当地所存在的扰动强度相当。太弱起不到控制的效果，太强会引入新的扰动主导失稳过程，反而会促进转捩。
+对于三维边界层转捩推迟问题，本文先研究了后掠Hiemenz流动这一基础模型流动。该流动是顺压梯度后掠平板的一种特殊情况。针对这种流动，本文提出了在每个展向周期放置一个DBD激发器的谐波激励控制方案。为了得到较优的控制参数，本文推导了基于伴随方程的敏感性分析公式。敏感性分析的结果指出，在低速条带下方，也就是横流涡下方偏下扫的位置处添加正方向的体积力可以抑制扰动的发展，后续的NPSE计算也验证了这一结果。本文同时测试了不同的激发器流向位置和激励电压，发现都是适中的情况控制效果较好。这表明所添加体积力的强度需要与当地所存在的扰动强度相当。太弱起不到控制的效果，太强会引入新的扰动主导失稳过程，反而会促进转捩。
 
-在真实的后掠翼工况中，本文先测试了之前在后掠Hiemenz流动中使用的谐波激励控制方法。然而这种方法对激发器展向位置精度要求非常高，导致其并不鲁棒。受之前研究得到的压力梯度效应对转捩影响的启发，提出采用等离子体激发器抑制横流的方法推迟转捩。由于控制中在每个展向周期放置两个激发器，所以这一控制方法又被叫做亚谐波激励。本文测试了将激发器放置在不同展向、流向位置，发现这一布置都能起到推迟转捩的效果。甚至在一个非设计工况，都成功的降低了边界层内扰动的能量。通过一个反向控制算例，本文揭示了降低了横流强度的基本流修正模态在控制中起主导作用。亚谐波激励控制实际是靠DBD产生的体积力削弱了横流，其激发出的亚谐模态仅仅是附带效果。并且，在这种压力梯度变化的翼型上，这一亚谐模态（本例中的展向波长2.5mm模态）是稳定模态。这也保证了新激励出的模态并不会成为新的主导模态。这一亚谐激励控制在后掠Hiemenz流动中的应用效果就不如在后掠翼流动中（并没有在文中展示），因为其高阶谐波在下游都会增长，一旦被激发出来就有可能成为新的主导模态。
+在真实的后掠翼工况中，本文先测试了之前在后掠Hiemenz流动中使用的谐波激励控制方法。然而这种方法对激发器展向位置精度要求非常高，导致其并不鲁棒。受之前研究得到的压力梯度效应对转捩影响的启发，提出采用等离子体激发器抑制横流的方法推迟转捩。由于控制中在每个展向周期放置两个激发器，所以这一控制方法又被叫做亚谐波激励。本文测试了将激发器放置在不同展向、流向位置，发现这一布置都能起到推迟转捩的效果。甚至在一个非设计工况，都成功的降低了边界层内扰动的能量。通过一个反向控制算例，本文揭示了降低了横流强度的基本流修正模态在控制中起主导作用。亚谐波激励控制实际是靠DBD产生的体积力削弱了横流，其激发出的亚谐模态仅仅是附带效果。并且，在这种压力梯度变化的翼型上，这一亚谐模态（本例中的展向波长2.5mm模态）是稳定模态。这也保证了新激励出的模态并不会成为新的主导模态。这一亚谐激励控制在后掠Hiemenz流动中的应用效果就不如在后掠翼流动中（未在文中展示），因为其高阶谐波在下游都会增长，一旦被激发出来就有可能成为新的主导模态。
 
-最后，本文对$Re_\tau=180$的充分发展槽道湍流，提出了定常激励和周期激励两种采用DBD等离子体激发器的控制方案。在定常激励控制方案中，两个向相反方向吹起的激发器在槽道中产生了与槽道大约同一尺度的流向涡。这个流向涡在槽道中部将流体快速的吸到壁面，然后又在计算的周期边界处，将流体向上抛回高速区。在向下吸的加速区，流动发生了再层流化，使得壁面附近整体的湍动能降低，从而降低的湍流摩阻。在这种控制方案中，产生的流向涡的强度至关重要，太强的流向涡反而会使得阻力增加。在周期激励方案中，激发器阵列被用于产生时而向左时而向右的展向周期振动。从分相位的条件平均结果来看，由于体积力在激励的前半个周期内会在流向涡下部产生与涡诱导速度方向相反的展向速度，这使得流向涡的生成收到阻碍。采用展向均匀的体积力激励会比采用有展向分布的DBD产生的体积力效果好。在这一控制方案中，激发器的密度是一个关键参数。密集布置的激发器可以降低展向不均匀性，从而取得较好的控制效果，而过稀的激发器布置反而会增加阻力。这两种控制方案均能起到大约9\%的减阻效果。
+最后，本文对$Re_\tau=180$的充分发展槽道湍流，提出了定常激励和周期激励两种采用DBD等离子体激发器的控制方案。在定常激励控制方案中，两个向相反方向吹起的激发器在槽道中产生了与槽道大约同一尺度的流向涡。这个流向涡在槽道中部将流体快速的吸到壁面，然后又在计算的周期边界处，将流体向上抛回高速区。在向下吸的加速区，流动发生了再层流化，使得壁面附近整体的湍动能降低，从而降低的湍流摩阻。在这种控制方案中，产生的流向涡的强度至关重要，太强的流向涡反而会使得阻力增加。在周期激励方案中，激发器阵列被用于产生时而向左时而向右的展向周期振动。从分相位的条件平均结果来看，由于体积力在激励的前半个周期内会在流向涡下部产生与涡诱导速度方向相反的展向速度，这使得流向涡的生成受到阻碍。采用展向均匀的体积力激励会比采用有展向分布的DBD产生的体积力效果好。在这一控制方案中，激发器的密度是一个关键参数。密集布置的激发器可以降低展向不均匀性，从而取得较好的控制效果，而过稀的激发器布置反而会增加阻力。定常激励和周期激励控制方案均能起到大约9\%的减阻效果。
 
 本文的工作还有一些不足之处，在后续的工作中可以逐渐改进和完善。后续需要做的工作有：
 \begin{enumerate}
-  \item 采用更能反应物理的等离子体模型。本文所采用的等离子体模型都是对单一DBD激发器建模得到的，但是用于减阻控制时都采用的是激发器阵列。这种密集排布的激发器会不会对体积力的分布有影响还有待研究。另外，在控制槽道湍流中本文提出的结论是激发器越密越好，但是实际能不能布置的那么密，也是需要研究的。之前提到过从第一原理出发的模型的计算量大是相比于简化模型而言的，相比于直接数值模拟器计算量还比较小。所以进行该模型的计算求解并非无法办到。
-  \item 在控制后掠翼转捩问题中，忽略了激发器产生体积力随时间的变化效应。引入这一效应是否会产生新的物理显现还有待研究。
-  \item 在控制后掠翼转捩问题中，受到计算量限制没有做二次失稳和涡破碎阶段的分析。这一阶段的失稳过程更复杂，流动结构更丰富，更值得深入研究。
+  \item 采用更能反应物理的等离子体模型。本文所采用的等离子体模型都是对单一DBD激发器建模得到的，但是用于减阻控制时都采用的是激发器阵列。这种密集排布的激发器会不会对体积力的分布有影响还有待研究。另外，在控制槽道湍流中本文提出的结论是激发器越密越好，但是实际能不能布置的那么密，也是需要研究的。之前提到过从第一原理出发的模型的计算量大，但那是相比于简化模型而言的，相比于直接数值模拟其计算量还比较小。所以用该模型求解体积力分布也是可以实现的。
+  \item 在控制后掠翼转捩问题中，忽略了激发器产生体积力随时间的变化效应。目前的控制主要是从扰动的线性发展阶段入手。在这一阶段100Hz量级的展向行波是不稳定的。理论上，激发器的频率可以达到10kHz量级，不会与其发生共振。但是，这一频率与二次失稳的频率相比差距并不是非常大。所以这一控制方案会不会激发非定常横流模态和二次失稳模态还是一个值得研究的课题。
+  \item 在控制后掠翼转捩问题中，受到计算量限制没有做二次失稳和涡破碎阶段的数值模拟。这一阶段的失稳过程更复杂，流动结构更丰富，更值得深入研究。并且通过这一阶段的模拟，可以清楚再现摩阻从层流到湍流的跳变过程，就能够将转捩推迟的效果转化为减阻率。
   \item 在控制槽道湍流中，没有计算总的能量输入输出。等离子体控制节省的能量能否将其花费的能量弥补回来还需要进一步研究。另外，从DBD周期激励中可以抽象出展向驻波控制湍流的方案，这也是一个值得进行参数研究的问题。
 \end{enumerate}
 
