--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -2205,3 +2205,9 @@ Philos Trans A Math Phys Eng Sci. 2011 Apr 13;369(1940):1443-58. doi: 10.1098/rs
           author = {朱辉},
         keywords = {通量重构方法,湍流模拟,隐式大涡模拟,壁面模型,前台阶流动},
 }
+@article{wang2018,
+   author = {Wang, Zhefu and Wang, Liang and Wang, Qiangyang and Xu,Shengjin and Fu, Song},
+   title = {Control of crossflow instability over a swept wing using dielectric-barrier-discharge plasma actuators},
+   journal = {International Journal of Heat and Fluid Flow},
+   type = {Journal Article}
+}
