--- a/data/chap03.tex
+++ b/data/chap03.tex
@@ -1,9 +1,9 @@
 \chapter{后掠Hiemenz流动的失稳分析与控制}
 后掠Hiemenz流动与后掠翼上的三维边界层流动非常相似，是非常好的模型流动。本文从这一流动出发，研究三维边界层的横流失稳。原始的二维Hiemenz流动就是一股平面射流，自上而下打到一块平板上，并向平板两边溢流开来。在无粘流的假设下，这与直角的角域流动完全等价。因此，我们可以通过构造幂指数复势解得到无粘的Hiemenz流动的流场分布。这里，将无粘流动壁面上的流速分布作为边界层外缘的速度分布。这一分布的流向速度分量是线性增加的，如式（\ref{e:HiemenzF}）。式中上标`$\dagger$'表示有量纲量，$c$是一个常系数。在二维Hiemenz流动的基础上，引入展向均匀的流动，就是后掠Hiemenz流动，如图（\ref{fig:SweptHiemenz}）所示。有一些研究主要着眼于其附着线的失稳研究\cite{Lin1996,Guegan2006}，本文重点分析研究远离附着线区域的横流转捩问题。研究区域如图（\ref{fig:SweptHiemenz}）中虚线所示。Malik等人\cite{Malik1994}对这一问题的首次失稳和二次失稳做了充分的研究，本文的控制算例也是以他们研究过的工况作为基准算例。本文中采用与文献中\cite{Malik1994}相同的方法求得这一流动的自相似解，并以此作为基本流。
 \begin{equation}\label{e:HiemenzF}
-  U_{\infty}=cx^{\dagger}
+  U^{\dagger}_{\infty}=c^{\dagger}x^{\dagger}
 \end{equation}
-在后掠Hiemenz流动中，引入的边界层外缘展向速度$W_{\infty}$在所有流向位置是相同的，因此将这一速度选作参考速度。Malik等人在研究这一问题时，也采用这一速度作为参考速度。$l^\dagger=(\nu/c)^{\frac{1}{2}}$ 可以用来表征边界层厚度，本文在这个算例中用这个长度作为参考长度。以$W_{\infty}$作为参考长度定义的雷诺数叫做横流雷诺数，$Re_W=W_{\infty}l^\dagger/\nu$，这个雷诺数在Malik等人的文章\cite{Malik1994}中被记做$\bar{R}$。
+在后掠Hiemenz流动中，引入的边界层外缘展向速度$W_{\infty}^{\dagger}$在所有流向位置是相同的，因此将这一速度选作参考速度。Malik等人在研究这一问题时，也采用这一速度作为参考速度。$l^\dagger=(\nu^{\dagger}/c^{\dagger})^{\frac{1}{2}}$ 可以用来表征边界层厚度，本文在这个算例中用这个长度作为参考长度。以$W_{\infty}^{\dagger}$作为参考速度定义的雷诺数叫做横流雷诺数，$Re_W=W_{\infty}^{\dagger}l^\dagger/\nu^{\dagger}$，这个雷诺数在Malik等人的文章\cite{Malik1994}中被记做$\bar{R}$。
 \section{后掠Hiemenz流动的稳定性分析}
 \begin{figure}[htb]
   \centering
@@ -11,7 +11,7 @@
   \includegraphics[width=0.7\textwidth]{ch3/plot_SweptHiemenz.eps}\\
   \caption{后掠Hiemenz流动示意图}\label{fig:SweptHiemenz}
 \end{figure}
-表\ref{t:testcase}列出了这一章研究的算例的具体参数。在后文中，这两个算例会被简记为Case1和Case2。其中Case1的参数与文献\cite{Malik1994}中完全相同，只是换算到了实际有量纲的情况。图\ref{f:Com_Malik1994}给出了Case1中主模态扰动延流向的发展变化。在本文的模拟计算中，流向用了600个网格点，基本上每个波长都有14个网格点。前人的文献中指出，对于PSE计算，每个波长内有3个网格点就绰绰有余了\cite{Joslin1992}，所以本文中使用的网格点密度是完全满足要求的。在垂直于壁面方向，Li等人\cite{Li2015a}指出281个网格点就完全够用了，本文的计算中一共给了301个点。从图\ref{f:Com_Malik1994}所示的结果中，也可以看到，本文的计算结果与文献给出的结果完全吻合，这也再一次验证了使用计算程序的精度。这套稳定性计算程序之前还进行过其他方面的稳定性计算，读者可以查阅\cite{Xu2011a,Xu2011b,Ren2014a,Ren2014b,Ren2014c,Ren2015,Ren2016}。在本章的研究中，采用的等离子体模型为从实验中反推出来的体积力分布模型（Kriegseis` model\cite{kriegseis2013velocity}）。在他们的实验中，一共测了8 ， 9 ， 10 kV 三个电压产生的体积力。这三个电压分别可以吹出来速度为1.7， 2.8， 3.8 m/s平行于壁面的射流。但是，在实际计算中发现，只有8kV的电压产生的体积力可以有效的控制Case1中的横流转捩，另外两个高电压产生的体积力都太强了，范围会促进转捩。所以为了研究电压的效应，在Case2中，将边界层外的展向速度提高了一倍，这样三个电压都可以产生一定的作用，并进行比较研究。
+表\ref{t:testcase}列出了这一章研究的算例的具体参数。在后文中，这两个算例会被简记为Case1和Case2。其中Case1的参数与文献\cite{Malik1994}中完全相同，只是换算到了实际有量纲的情况。图\ref{f:Com_Malik1994}给出了Case1中主模态扰动延流向的发展变化。在本文的模拟计算中，流向用了600个网格点，基本上每个波长都有14个网格点。前人的文献中指出，对于PSE计算，每个波长内有3个网格点就绰绰有余了\cite{Joslin1992}，所以本文中使用的网格点密度是完全满足要求的。在垂直于壁面方向，Li等人\cite{Li2015a}指出281个网格点就完全够用了，本文的计算中一共给了301个点。从图\ref{f:Com_Malik1994}所示的结果中，也可以看到，本文的计算结果与文献给出的结果完全吻合，这也再一次验证了使用计算程序的精度。这套稳定性计算程序之前还进行过其他方面的稳定性计算，读者可以查阅\cite{Xu2011a,Xu2011b,Ren2014a,Ren2014b,Ren2014c,Ren2015,Ren2016}。在本章的研究中，采用的等离子体模型为从实验数据中反推出来的Kriegseis模型\cite{kriegseis2013velocity}。在他们的实验中，一共测了8 ， 9 ， 10 kV 三个电压产生的体积力。这三个电压分别可以吹出来速度为1.7， 2.8， 3.8 m/s平行于壁面的射流。但是，在实际计算中发现，只有8kV的电压产生的体积力可以有效的控制Case1中的横流转捩，另外两个高电压产生的体积力都太强了，反而会促进转捩。所以为了研究电压的效应，在Case2中，将边界层外的展向速度提高了一倍，这样三个电压都可以产生一定的控制效果，并进行比较研究。
 \begin{figure}[htb]
   \centering
   % Requires \usepackage{graphicx}
@@ -21,19 +21,19 @@
 \begin{table}
   \caption{计算研究算例的参数}\label{t:testcase}
   \centering
-  \begin{tabular}{p{2.3cm}<{\centering}|p{2.5cm}<{\centering}p{3.5cm}<{\centering}p{2.5cm}<{\centering}p{3.5cm}<{\centering}}%{p{3cm}p{3cm}p{3cm}p{3cm}p{3cm}}
-  \hline
+  \begin{tabular}{p{2.3cm}<{\centering}p{2.5cm}<{\centering}p{3.5cm}<{\centering}p{2.5cm}<{\centering}p{3.5cm}<{\centering}}%{p{3cm}p{3cm}p{3cm}p{3cm}p{3cm}}
+  \toprule[1.5pt]
   % after \\: \hline or \cline{col1-col2} \cline{col3-col4} ...
-        & $c{\rm (s^{-1})}$ & $l^\dagger=(\nu/c)^{\frac{1}{2}} ({\rm mm})$ & $W_\infty{\rm (m/s)}$ & $Re_W=W_\infty l^\dagger/\nu$ \\
-  \hline
+        & $c^{\dagger}{\rm (s^{-1})}$ & $l^\dagger=(\nu^{\dagger}/c^{\dagger})^{\frac{1}{2}} ({\rm mm})$ & $W_\infty^{\dagger}{\rm (m/s)}$ & $Re_W=W_\infty^{\dagger} l^\dagger/\nu^{\dagger}$ \\
+  \midrule[1pt]
   Case1 & 40          & 0.6014            & 12              & 500 \\
   Case2 & 40          & 0.6014            & 24              & 1000 \\
-  \hline
+  \bottomrule[1.5pt]
   \end{tabular}
 
 \end{table}
 
-针对这两个算例，本文首先进行了线性稳定性分析（LST）。在线性稳定性分析中，在不同的流向位置均采用小扰动假设和平行流假设，计算不同展向波数$\beta$的横流定常模态的增长率。最终得到模态的增长率随流向位置和展向波数的变化如图\ref{f:LST}。在这两个计算中，展向波数的取值范围均为$\beta\in[0.1,1]$。因为这里只关注由壁面粗糙度激发出来的定常横流模态，所以模态的频率$\omega = 0$。这里所说的流向增长率即为计算得到的复流向波数的虚部的相反数，即$-\alpha_i$。对于Case1，失稳模态首先出现在$x = 83$，失稳模态的展向波数$\beta$为0.12。最大的失稳模态增长率出现在$x =305$，展向波数$\beta$为0.33，增长率为0.0243。对于Case2，失稳模态首先出现在$x = 85$，失稳模态的展向波数$\beta$为0.05。最大的失稳模态增长率出现在$x =451$，展向波数$\beta$为0.26，增长率为0.0336。对比这两个算例，可以发现，随着横向流动的增加，失稳模态的增长率更高了，失稳的区域也更加偏向于下游。另外需要提及的是两者中性曲线，也就是增长率为0的等值线形状的变化。总的来说，随着增横向流动的增大，中性曲线的下支越来越贴近坐标的横轴线，上支的斜率越来越小。其中，上支的斜率越来越小说明高波数的模态的失稳位置更加倾向于下游。
+针对这两个算例，本文首先进行了线性稳定性分析（LST）。在线性稳定性分析中，在不同的流向位置均采用小扰动假设和平行流假设，计算不同展向波数$\beta$的横流定常模态的增长率。最终得到模态的增长率随流向位置和展向波数的变化如图\ref{f:LST}。在这两个计算中，展向波数的取值范围均为$\beta\in[0.1,1]$。因为这里只关注由壁面粗糙度激发出来的定常横流模态，所以模态的频率$\omega = 0$。这里所说的流向增长率即为计算得到的复流向波数的虚部的相反数，即$-\alpha_i$。对于Case1，失稳模态首先出现在$x = 83$，失稳模态的展向波数$\beta$为0.12。最大的失稳模态增长率出现在$x =305$，展向波数$\beta$为0.33，增长率为0.0243。对于Case2，失稳模态首先出现在$x = 85$，失稳模态的展向波数$\beta$为0.05。最大的失稳模态增长率出现在$x =451$，展向波数$\beta$为0.26，增长率为0.0336。对比这两个算例，可以发现，随着横流速度的增加，失稳模态的增长率更高了，失稳的区域也更加偏向于下游。另外需要提及的是中性曲线，也就是增长率为0的等值线形状的变化。总的来说，随着横流速度的增大，中性曲线的下支越来越贴近坐标轴横轴，上支的斜率越来越小。上支的斜率越来越小说明高波数模态的失稳位置更加倾向于下游。
 
 \begin{figure}[htb]
   \centering
@@ -50,7 +50,7 @@
   \caption{定常横流模态的流向增长率}\label{f:LST}
 \end{figure}
 
-线性稳定性计算只能够静态的得到每个模态在不同的位置的增长率，而得不到模态演化以及相互影响的过程。之后本文对这两个算例都进行了NPSE的计算。稳定性分析仅仅能够得到扰动在边界层内的增长情况，但是并不能计算得到扰动的初始值。不同的来流条件和壁面光滑程度会导致不同的扰动初值幅值，计算初始值需要对流动进行感受性分析。由于本文并不关心感受性过程，所以这里只研究一种可能的初始值情况。这里计算模拟了初始扰动主模态的展向波数为0.1、0.2、0.3、0.4和 0.5的5种情况。这些些模态分别被记为Mode1到Mode5。由于不同展向波数的模态的失稳起始位置是不一样的，所以本文的NPSE计算的起始点也是各个子算例各有不同。这5个模态分别起始于$x=86,101,134,173$和218。这也分别是LST预测的失稳起始位置。在计算起始位置只有主模态，所有高阶模态都是后续通过非线性效应激发出来。计算得到的结果如图\ref{f:findtarget}所示。可以看到，Mode1最先失稳，但是相比于其他模态，其增长率则相对较低，所以很快便被其他模态超越。Mode3，其展向波数为$\beta$=0.3在$x = 470$处首先达到饱和。定性的，首次失稳饱和之后，在饱和横流涡上发生的二次失稳会很快促发转捩。所以这里Mode3将是主导转捩的模态。之后，本章将以此模态作为控制目标模态，所有控制算例均谊在控制此模态。
+线性稳定性计算只能够静态的得到每个模态在不同的位置的增长率，而无法解析模态演化以及相互影响的过程。之后本文采用非线性PSE（Nonlinear PSE，NPSE）解析模态的演化过程。稳定性分析能够解析扰动在边界层内的增长情况，但是还需要其他方法给定扰动的初始值。不同的来流条件和壁面光滑程度会导致不同的扰动初始幅值，计算初始值需要对流动进行感受性分析。由于本文并不关心感受性过程，所以这里只研究一种可能的初始值情况。这里计算模拟了初始扰动主模态的展向波数为0.1、0.2、0.3、0.4和 0.5的5种情况。这些些模态分别被记为Mode1到Mode5。由于不同展向波数的模态的失稳起始位置不一样，所以本文的NPSE计算的起始点在各个子算例中也是不同的。这5个模态分别起始于$x=86,101,134,173$和218。这也分别是LST预测的失稳起始位置。在计算起始位置只有主模态，所有高阶模态都是后续通过非线性效应激发出来。计算得到的结果如图\ref{f:findtarget}所示。可以看到，Mode1最先失稳，但是相比于其他模态，其增长率则相对较低，所以很快便被其他模态超越。展向波数为$\beta$=0.3的Mode3在$x = 470$处首先达到饱和。定性的，首次失稳饱和之后，在饱和横流涡上发生的二次失稳会很快促发转捩。所以这里Mode3将是主导转捩的模态。之后，本章将以此模态作为控制目标模态，所有控制算例均旨在控制此模态。
 
 \begin{figure}
   \centering
@@ -68,7 +68,7 @@
 \end{figure}
 \section{后掠Hiemenz流动的敏感性分析}
 \subsection{基于LST的敏感性分析}
-在这一小节中，介绍一下敏感性分析的研究成果。从式（\ref{e:LST_adjoint}）中我们发现伴随向量是直接起到对体积力的加权作用的，所以通过对该向量的分析，我们可以获得体积力法向敏感性分布的大致情况。三个方向伴随速度（伴随向量中对应于速度的三个分量）的分布如图\ref{f:LST_ADJOINT}：
+在这一小节中，介绍一下敏感性分析的研究成果。从式（\ref{e:LST_adjoint}）中我们发现伴随向量是直接起到对体积力进行加权的作用的，所以通过对该向量的分析，我们可以获得体积力法向敏感性分布的大致情况。三个方向伴随速度（伴随向量中对应于速度的三个分量）的分布如图\ref{f:LST_ADJOINT}：
 \begin{figure}[htb]
   \centering
   \subcaptionbox{$u^*$分布云图}[0.55\textwidth]
@@ -87,9 +87,9 @@
   {\includegraphics[width=0.43\textwidth]{ch3/absaw.jpg}}
   \caption{LST伴随向量}\label{f:LST_ADJOINT}
 \end{figure}
-从伴随速度的分布中我们可以看到，展向和流向的伴随速度始终大于法向的伴随速度。这表明，该流动对于展向和法向的激励更加敏感，而对于法向的机理则不是那么敏感。另外，随着扰动延流向发展，其对展向的激励越来越敏感，而对流向则越来越不敏感。从物理上这也很好解释。在靠近前缘的位置，基本流的流向分量很弱，所以只需要很小的扰动就能够对其产生很大的影响。之后随着流向的推进发展，流向的基本流越来越强，对其产生扰动需要的力量也就越来越大，从而敏感性也就越来越低。
+从伴随速度的分布中我们可以看到，展向和流向的伴随速度始终大于法向的伴随速度。这表明，该流动对于展向和法向的激励更加敏感，而对于法向的激励则不是那么敏感。另外，随着扰动延流向发展，其对展向的激励越来越敏感，而对流向则越来越不敏感。从物理上这也很好解释。在靠近前缘的位置，基本流的流向分量很弱，所以只需要很小的扰动就能够对其产生很大的影响。之后随着流向的推进发展，流向的基本流越来越强，对其产生扰动需要的力量也就越来越大，从而敏感性也就越来越低。
 
-针对我们提出的等离子体控制方案，我们用所推导出的敏感性公式分析其控制效率，得到在某一固定位置，扰动模态增长率变化与激发器展向位置和安装角度的关系如图\ref{f:senVSangle_span}。
+这里用所推导出的敏感性公式分析流动对DBD激发出来的体积力的敏感性。假设在每一个展向周期放置一个DBD激发器，且每个周期的安装角度是相同的。扰动模态增长率变化与激发器展向位置和安装角度的关系如图\ref{f:senVSangle_span}。
 \begin{figure}[htb]
   \centering
   \subcaptionbox{敏感性随安装的展向位置和角度变化}[0.45\textwidth]
@@ -106,8 +106,8 @@
   {\includegraphics[width=0.45\textwidth]{ch3/senVSangle.jpg}}
   \caption{LST敏感性分析结果}\label{f:senVSangle_span2}
 \end{figure}
-在这里，我们在增长率变化量后面乘了一个因子cos$(\theta)$，这是因为当偏转激发器角度的时候，激发器所能覆盖的流向位置就变短了，变成了原来的cos$(\theta)$倍。而增长率指的是单位流向长度的增长率，所有乘上了这个系数。可以看到，敏感因子随着展向的变化呈正弦规律，而最佳安装角度36$^\circ$与横流涡角度44$^\circ$差距不大。
-得到不同的流向位置最大增长率减小值之后，我们对比了流向敏感性，如图\ref{f:senVSstr}。我们可以看到，在进入失稳区之后，相同大小的体积力对横流模态的影响就越来越小。然而这一结论是建立在线性、单一模态、正确相位的基础上的，实际应用时，越靠近中性点越容易激发出别的扰动模态从而影响转捩。
+在这里，我们在增长率变化量后面乘了一个因子cos$(\theta)$，这是因为当偏转激发器角度的时候，激发器所能覆盖的流向位置就变短了，变成了原来的cos$(\theta)$倍。而增长率指的是单位流向长度的增长率，所以乘上了这个系数。可以看到，敏感因子随着展向的变化呈正弦规律，而最佳安装角度36$^\circ$与横流涡角度44$^\circ$差距不大。
+得到不同的流向位置最大增长率减小值之后，我们对比了流向敏感性，如图\ref{f:senVSstr}。我们可以看到，在进入失稳区之后，相同大小的体积力对横流模态的影响越向下游越小。然而这一结论是建立在线性、单一模态的分析假设下的，并且要求体积力相对于自然扰动模态要非常小。在中性曲线附近，自然扰动非常小，外加体积力无法看成是小量，这一分析也就不再适用。
 \begin{figure}
   \centering
   \includegraphics[width=0.5\textwidth]{ch3/senVSstr.jpg}
@@ -115,7 +115,7 @@
 \end{figure}
 
 \subsection{基于PSE的敏感性分析}
-由于基于LST的敏感性分析还是局部性质的结果，并且在推导的时候忽略了二阶项的影响，所以其结果精确度并不高。这一小节主要展示基于PSE的稳定性分析及的结果。依然是针对Case1以及我之前确定的目标模态。这里由于本文希望采用的控制方案还是在线性区进行控制，所以敏感性分析也是只针对线性区进行。因此，这里的原始方程是线性PSE方程，并不包含模态之间的非线性相互作用。图\ref{f:Guvw1}给出了流向速度和敏感因子在$x =280$位置横截面的分布。需要注意的是，在基于LSE的敏感性分析中，针对的目标变量是扰动模态的增长率，而在基于PSE的敏感性分析中，针对的目标变量是下游某一位置处的扰动能量（式（\ref{e:PSEoutput_energy}））。图\ref{f:Guvw1}展示的是输出扰动能量选取在$x =500$的结果。其中，用颜色表示的云图是流向的速度分布，线条是各个方向敏感性因子的等值线。这里用实线表示正值用虚线表示负值。从流向速度分布的云图中，可以看到横流涡正在形成，但是还没有标志着横流涡达到饱和的"上叶翻转"现象。"上叶翻转"也是强非线性产生的标志。从流向速度分布云图中可以看出，这个分析敏感性的位置还处于线性增长区，也符合本文的初衷。虽然横流涡在这里还没有完全形成，但是壁面附近已经有了高低速相间的条带。其他位置的敏感因子分布情况与图\ref{f:Guvw1}展示的类似，这里就不再赘述。值得一提的是，相比于敏感因子的大小，敏感因子的正负是指导控制方案的关键。
+由于基于LST的敏感性分析还是局部性质的结果，并且在推导的时候忽略了二阶项的影响，所以其结果精确度并不高。这一小节主要展示基于PSE的稳定性分析及的结果。依然是针对Case1以及我之前确定的目标模态。这里由于本文希望采用的控制方案还是在线性区进行控制，所以敏感性分析也是只针对线性区进行。因此，这里的原始方程是线性PSE方程，并不包含模态之间的非线性相互作用。图\ref{f:Guvw1}给出了流向速度和敏感因子在$x =280$位置横截面的分布。需要注意的是，在基于LST的敏感性分析中，针对的目标变量是扰动模态的增长率，而在基于PSE的敏感性分析中，针对的目标变量是下游某一位置处的扰动能量（式（\ref{e:PSEoutput_energy}））。图\ref{f:Guvw1}展示的是输出扰动能量选取在$x =500$的结果。其中，用颜色表示的云图是流向的速度分布，线条是各个方向敏感性因子的等值线。这里用实线表示正值，用虚线表示负值。从流向速度分布的云图中，可以看到横流涡正在形成，但是还没有标志着横流涡达到饱和的低速流体翻转现象。低速流体翻转现象也是强非线性产生的标志。从流向速度分布云图中可以看出，这个分析敏感性的位置还处于线性增长区，也符合本文的初衷。虽然横流涡在这里还没有完全形成，但是壁面附近已经有了高低速相间的条带。其他位置的敏感因子分布情况与图\ref{f:Guvw1}展示的类似，这里就不再赘述。值得一提的是，相比于敏感因子的大小，敏感因子的正负是指导控制方案的关键。
 \begin{figure}[H]
   \centering
   % Requires \usepackage{graphicx}
@@ -155,9 +155,9 @@
   \caption{$x =280$处横截面上流向速度分布云图和三个方向敏感性因子分布等值线： (a) $G_u$, (b) $G_v$ and (c) $G_w$。实线表示正值，虚线表示负值。扰动能量输出位置选取在$x =300$}\label{f:Guvw1_300}
 \end{figure}
 
-如图\ref{f:Gu1}所示，$G_u$的正值分布在高速条带下方，并且斜着向上延伸，与相邻的低速条带重合。正值区与负值区相间交替出现。图\ref{f:Gv1}中，$G_v$的正值主要集中在低速条带出现的区域，而高速条带位置主要是负值。这意味着如果想要通过法向激励的方式，比如壁面垂直吹吸之类的方法控制失稳，那么就需要在低速条带下面吸气，在高速条带下面吹气。$G_v$的0值等值线并不像$G_u$和$G_w$的0值等值线那样扭曲。$G_w$的分布情况基本与$G_u$类似，只是正负值分布的区域做了交换。在D\"orr和Kloker\cite{dorr2016}提出的等离子体控制方法中，他们有两个基础的控制算例分别叫做ACF和CCF。这两个控制算例的计算结果展示在他们文章的Fig 4 中。在ACF算例，有着展向正方向分量的体积力被施加在了横流涡下方，也就是图\ref{f:Gw1}所示的$G_w$恰好是负值的位置。在他们的算例CCF中，有着与ACF中体积力相反方向的体积力被施加在了二次涡出现的位置，也就是图\ref{f:Guvw1_300}中所示高速条带的位置。这里一位置的$G_w$恰好是正的。从式（\ref{e:adjointresult}）可知，负的敏感因子乘上正的体积力，或者是正的敏感因子乘上负的体积力，都可以得到负的扰动能量变化，也就是使得扰动变弱。D\"orr和Kloker\cite{dorr2016}的结果也印证了这里敏感性分析的结论。在下一小节的等离子体控制算例的结果，也会对本文推倒的敏感性分析做相关的印证。
+如图\ref{f:Gu1}所示，$G_u$的正值分布在高速条带下方，并且斜着向上延伸，与相邻的低速条带重合。正值区与负值区相间交替出现。图\ref{f:Gv1}中，$G_v$的正值主要集中在低速条带出现的区域，而高速条带位置主要是负值。这意味着如果想要通过法向激励的方式，比如壁面垂直吹吸之类的方法控制失稳，那么就需要在低速条带下面吸气，在高速条带下面吹气。$G_v$的0值等值线并不像$G_u$和$G_w$的0值等值线那样扭曲。$G_w$的分布情况基本与$G_u$类似，只是正负值分布的区域做了交换。在D\"orr和Kloker\cite{dorr2016}提出的等离子体控制方法中，他们有两个基础的控制算例分别叫做ACF和CCF。这两个控制算例的计算结果展示在他们文章的Fig 4 中。在ACF算例，有着展向正方向分量的体积力被施加在了横流涡下方，也就是图\ref{f:Gw1}所示的$G_w$恰好是负值的位置。在他们的算例CCF中，有着与ACF中体积力相反方向的体积力被施加在了二次涡出现的位置，也就是图\ref{f:Guvw1_300}中所示高速条带的位置。这里一位置的$G_w$恰好是正的。从式（\ref{e:adjointresult}）可知，负的敏感因子乘上正的体积力，或者是正的敏感因子乘上负的体积力，都可以得到负的扰动能量变化，也就是使得扰动变弱。D\"orr和Kloker\cite{dorr2016}的结果也印证了这里敏感性分析的结论。在下一小节的等离子体控制算例的结果，也会对本文推导的敏感性分析方法做相关的印证。
 
-由于并不知道扰动能量输出位置的选取对敏感性因子的计算结果有没有影响，所以本文计算了输出位置在$x=450,400,350,300$的敏感性因子分布。图\ref{f:Guvw1_300}给出了$x=280$截面上流向速度分布云图和敏感性因子的等值线，但这一次的扰动能量输出位置选取在$x=300$。相比较输出位置选取在$x=500$，流向和展向敏感因子的分布更加的贴近壁面。然而，当输出位置与所观察的截面想去较远时，如输出位置在$x=350,400,450$，则结果和图\ref{f:Guvw1}中的分布几乎完全一样。所以这里不再将这些相同的分布罗列出来。所以，通过比较输出位置在$x=500,450,400,350,300$这五个算例，可以下如下结论：当在近所关心位置上游不远处进行控制时，更加靠近壁面的控制激励效果更好。但是这一效应在远离所关心位置之后迅速衰减并消失。由于本文之后采取的控制措施都是在离关心区域较远的位置，之后展示的敏感因子均是以$x=500$为输出位置计算得到的。
+由于并不知道扰动能量输出位置的选取对敏感性因子的计算结果有没有影响，所以本文计算了输出位置在$x=450,400,350,300$的敏感性因子分布。图\ref{f:Guvw1_300}给出了$x=280$截面上流向速度分布云图和敏感性因子的等值线，但这一次的扰动能量输出位置选取在$x=300$。相比较输出位置选取在$x=500$，流向和展向敏感因子的分布更加的贴近壁面。然而，当输出位置与所观察的截面相去较远时，如输出位置在$x=350,400,450$，则结果和图\ref{f:Guvw1}中的分布几乎完全一样。所以这里不再将这些相同的分布罗列出来。所以，通过比较输出位置在$x=500,450,400,350,300$这五个算例，可以下如下结论：当在近所关心位置上游不远处进行控制时，更加靠近壁面的控制激励效果更好。但是这一效应在远离所关心位置之后迅速衰减并消失。由于本文之后采取的控制措施都是在离关心区域较远的位置，之后展示的敏感因子均是以$x=500$为输出位置计算得到的。
 
 \begin{figure}[htb]
   \centering
@@ -170,7 +170,7 @@
 
 图\ref{f:Guvw_xy}给出了三个方向敏感性因子展向最大值在$y-x$平面内的分布。从图中可以看到，流向的敏感性因子最大。另外，最敏感的区域位于边界层内，但是离壁面却还有一定的距离。这是因为在壁面附近，粘性主导，速度剪切很大，体积力想改变流动非常困难，远不如远离壁面的位置改变流动容易。当然，如果出了边界层，体积力产生的扰动又不会影响失稳模态，从而敏感性也会降低。所以最敏感的区域出现在高度适中的位置。
 
-图\ref{f:maxsen}给出了不同流向位置敏感性因子在横截面上最大值的分布。图中虚线表示的是中心点的位置$x=134$。敏感性因子的峰值大约在中性点前一点点的位置。这和文献\cite{pralits2000sensitivity}中给出的二维平板的敏感性分析结果类似。这一结果与本文之前给出的基于LST的敏感性分析类似，从而也互相印证了这两种方法的正确性。在失稳区域，敏感性快速下降，这也意味着对扰动的控制在外加体积力相同的条件下，越靠近上游越好。但是需要注意的是，敏感性分析的前提假设是体积力引入的扰动相对于流动本身就有的扰动是一个小量。很显然，在上游扰动刚刚生成，还非常弱，如果引入的体积力会产生比自然扰动还强的扰动，则反而会适得其反，使得新的扰动盖掉了之前的自然扰动，反而会促进转捩。所以合适的最佳流向位置还需要做进一步的研究。
+图\ref{f:maxsen}给出了不同流向位置敏感性因子在横截面上的最大值。图中虚线表示的是中心点的位置$x=134$。敏感性因子的峰值大约在中性点前一点。这和文献\cite{pralits2000sensitivity}中给出的二维平板的敏感性分析结果类似。这一结果也与本文之前给出的基于LST的敏感性分析类似，从而也互相印证了这两种方法的正确性。在失稳区域，敏感性快速下降，这也意味着对扰动的控制在外加体积力相同的条件下，越靠近上游越好。但是需要注意的是，敏感性分析的前提假设是体积力引入的扰动相对于流动本身就有的扰动是一个小量。很显然，中性点附近，扰动刚刚生成，还非常弱，如果引入的体积力产生了比自然扰动还强的扰动，则会适得其反，使得新的扰动盖掉了之前的自然扰动，从而促进转捩。所以合适的最佳流向位置还需要做进一步的研究。
 \begin{figure}[H]
   \centering
   % Requires \usepackage{graphicx}
@@ -198,7 +198,7 @@
 \end{figure}
 
 \section{采用等离子体激发器推迟后掠Hiemenz流动转捩}
-上一小节给出的敏感性分析都是基于线性稳定性的，这一小节将重点介绍非线性抛物华扰动方程（NPSE）计算的结果。在这一小节中，等离子体模型均使用之前介绍的Kriegseis的模型\cite{kriegseis2013velocity}。所有激发器的电压均为8kV。更高的电压也做过测试，但是由于NPSE本身是一种稳定性分析的方法，是用来计算小扰动的。当大于8kV的电压加入到流场中，计算就因为扰动过强而直接崩溃了。在崩溃前可以观察到扰动能量的大幅提升。这也说明了过高的电压对转捩反而会起到促进作用。采用8kV的电压进行控制时，首先研究了展向的位置效应。控制时，在每个展向波长内放置一个激发器。由于这样的激励会直接刺激主模态，所以本文中将这种方法命名为谐波激励。激发器位于不同的展向位置时，边界层内的扰动能量演化情况如图\ref{f:spanwiseeffect}所示。在本文中，模态能量的定义如下：
+上一小节给出的敏感性分析都是基于线性稳定性的，这一小节将重点介绍非线性抛物华扰动方程（NPSE）计算的结果。在这一小节中，等离子体模型均使用之前介绍的Kriegseis的模型\cite{kriegseis2013velocity}。所有激发器的电压均为8kV。更高的电压也做过测试，但是由于NPSE本身是一种稳定性分析的方法，是用来计算小扰动的，当大于8kV的电压加入到流场中，计算就因为扰动过强而直接崩溃了。在崩溃前可以观察到扰动能量的大幅提升。这也说明了过高的电压对转捩反而会起到促进作用。采用8kV的电压进行控制时，首先研究了展向的位置效应。控制时，在每个展向波长内放置一个激发器。由于这样的激励会直接刺激主模态，所以本文中将这种方法命名为谐波激励。激发器位于不同的展向位置时，边界层内的扰动能量演化情况如图\ref{f:spanwiseeffect}所示。在本文中，模态能量的定义如下：
 \begin{equation}
 {\rm Energy}=\frac{1}{2}\int_{0}^{\infty}{(|\hat u|^2+|\hat v|^2+|\hat w|^2)dy}
 \end{equation}
@@ -207,7 +207,7 @@
 {\rm Energy}_{00}=\frac{1}{4}\int_{0}^{\infty}{(|\hat u|^2+|\hat v|^2+|\hat w|^2)dy}
 \end{equation}
 
-图\ref{f:spanwiselocations}给出了不同算例中等离子体激发器产生的体积力和横流涡的展向位置关系。这里列出的激发器的展向位置分别在$z/T_z = 0.5, 0.6, 0.7, 0.8, 0.9, 1.0$，本文之后简记为算Case（a）-（f）。由于横流涡是斜的，所以在不同的流向界面上，横流涡所处的展向位置并不相同。也就是说单说展向坐标并没有实际意义，关注的主要应该放在体积力和横流涡的相对位置上。图中的颜色云图是体积力的分布，截掉了小于最大值10\%的颜色。图中的线是流向速度的等值线，可以看到横流涡将壁面的低速流动卷起并翻转。等离子体在流向的激励区域用两个蓝色的点表示出来。这里模态还是用频率-展向波数来表示。由于本文针对的还都是驻涡模态，所以第一个数字都是零。第二个数据表示模态展向波数相对于主模态展向波数的倍数。如之前提到的(0,0)模态即为基本流修正模态，(0,1)是主模态，(0,2)是半波长的次谐波模态。从图\ref{f:spanwiseeffect}中可以看到，主模态的演化规律和之前敏感性分析预测的结果吻合：在Cases(d)和(e)中，主模态能量大幅下降，而这时体积力的位置正好在横流涡的下方，也就是之前敏感性分析得到的$G_w$为负值的区域。在这两个算例中，主模态的能量分别降到了0.0067和0.0077。然而在Cases(a)到(d)中，(0,2)模态被促进了，这和D\"orr与Kloker\cite{dorr2016}在他们的DNS的结果中观察到的相同（他们文章中的Fig 8）。在有些算例中（图\ref{f:d}），(0,2)模态的能量甚至超过了主模态的能量。不过，在Cases(e)和(f)中，并没有出现(0,2)模态被促进这一现象。所以，半波长模态能量的增加并不是所有算例共有的特性，通过调整激发器的展向位置，是可以有效降低所有模态的能量的。在图中所示的算例中，可以看到激发器在$z/Tz=0.9$效果最好。需要提一下的是，D\"orr和Kloker的 DNS\cite{dorr2016}结果中，所有算例里(0,2)模态都被激发了。
+图\ref{f:spanwiselocations}给出了不同算例中等离子体激发器产生的体积力和横流涡的展向位置关系。这里列出的激发器的展向位置分别在$z/T_z = 0.5, 0.6, 0.7, 0.8, 0.9, 1.0$，本文之后简记这些算例为Case（a）-（f）。由于横流涡是斜的，所以在不同的流向位置，横流涡所处的展向位置并不相同。也就是说单说展向坐标并没有实际意义，关注点应该放在体积力和横流涡的相对位置上。图中的颜色云图是体积力的分布，截掉了小于最大值10\%的颜色。图中的线是流向速度的等值线，可以看到横流涡将壁面的低速流动卷起并翻转。等离子体在流向的激励区域用两个蓝色的点表示出来。这里模态还是用 频率-展向波数 来表示。由于本文针对的都是驻涡模态，所以第一个数字都是零。第二个数字表示模态展向波数相对于主模态展向波数的倍数。如之前提到的(0,0)模态即为基本流修正模态，(0,1)是主模态，(0,2)是半波长的次谐波模态。从图\ref{f:spanwiseeffect}中可以看到，主模态的演化规律和之前敏感性分析预测的结果吻合：在Cases(d)和(e)中，主模态能量大幅下降，而这时体积力的位置正好在横流涡的下方，也就是之前敏感性分析得到的$G_w$为负值的区域。在这两个算例中，主模态的能量分别降到了0.0067和0.0077。然而在Cases(a)到(d)中，(0,2)模态被促进了，这和D\"orr与Kloker\cite{dorr2016}在他们的DNS的结果中观察到的相同（他们文章中的Fig.8）。在有些算例中（图\ref{f:d}），(0,2)模态的能量甚至超过了主模态的能量。不过，在Cases(e)和(f)中，并没有出现(0,2)模态被促进这一现象。所以，半波长模态能量的增加并不是所有算例共有的特性，通过调整激发器的展向位置，是可以有效降低所有模态的能量的。在图中所示的算例中，可以看到激发器在$z/Tz=0.9$效果最好。需要提一下的是，D\"orr和Kloker的 DNS\cite{dorr2016}结果中，所有算例里(0,2)模态都被激发了。
 
 
 \begin{figure}[H]
@@ -220,7 +220,7 @@
     \begin{subfigure}{0.45\textwidth}           %
         %% label for first subfigure
         \includegraphics[width=\linewidth]{ch3/comparemodes(b).eps}
-        \caption{$z/T_z = 0.6$}\label{f:b} 
+        \caption{$z/T_z = 0.6$}\label{f:b}
     \end{subfigure}
     \\ \bigskip
     \begin{subfigure}{0.45\textwidth}         %
@@ -302,7 +302,7 @@
   \caption{激发器位于不同的流向位置控制效果对比。横轴为据控制起始位置$x_{\rm start}$的距离，纵轴为控制后主模态幅值与无控制主模态幅值之差}\label{f:streamforce2}
 \end{figure}
 
-接下来进行等离子体激发器流向位置效应的研究。需要提及的是，在每一个流向位置，本文都测试了诸多展向控制位置，并且将其中最好的一个算例选取出来进行比较。每一个位置的激发器展向效应与之前给出的类似，这里便不再赘述。研究方法依然选用的是NPSE。图\ref{f:streamforce}对比了控制开始于$x_{\rm start}=315, 358, 400$位置处的控制效果。这里每一个控制算例的展流向激励长度，也就是等离子体在流向延伸的长度是相同的。由于转捩主要还是由主模态主导的，这里主要对比了主模态的能量。这里用到的体积力是之前算例的十分之一，这是因为在上游扰动非常弱，并不需要太强的体积力。体积力过强反而会污染干净的边界层。控制起始于$x_{start}=358$的算例中的主模态能量要远远小于控制起始于$x_{start}=400$算例中的主模态能量，这是因为前者的控制区域更靠近中性点$x=134$，控制的区域边界层内本身有的扰动较弱，所以控制效率较高。读者可以回忆之前敏感性分析的结果，不论是基于LST的敏感性分析还是基于PSE的敏感性分析，都指出在失稳区域，越上游控制越有效。这两个算例的结果对比符合之前敏感性分析给出的结论。图\ref{f:streamforce2}对比了主模态流向扰动速度在控制区域的变化。这里横坐标是距控制起始位置的距离，也就是$x-x_{\rm start}$。可以看到，在刚刚开始的位置，也就是靠近控制起始点$x_{start}$附近，算例$x_{start}=315$中主模态流向扰动速度下降的最快，也下降的最多。在这一阶段，总的施加于流动上的体积力还不多，所以添加的体积力还很小，满足小扰动假设。因此敏感性分析的结论依然成立，也就是控制越靠上游，效果越好。但是在$x_{start}+18.7$之后，$x_{start}=315$算例的结果与另外两个算例的结果分道扬镳，其主模态不在是减弱，而是开始增长。这就是因为体积力引入的新的扰动已经盖过了原有的扰动，并开始主导失稳过程。需要说明的是，这里曲线出现了很突然的拐折并不是计算的问题，而是因为图中展示的主模态流向扰动速度在横截面上的最大值，当最大值从一个空间位置跳变到另一个空间位置，就会出现导数的不连续。从上面的结果对比，可以做出结论——适当的流向控制位置非常关键。
+接下来进行等离子体激发器流向位置效应的研究。需要提及的是，在每一个流向位置，本文都测试了诸多展向控制位置，并且将其中最好的一个算例选取出来进行比较。研究方法依然选用的是NPSE。图\ref{f:streamforce}对比了控制开始于$x_{\rm start}=315, 358, 400$位置处的控制效果。这里每一个控制算例的展流向激励长度，也就是等离子体在流向延伸的长度是相同的。由于转捩主要还是由主模态主导的，这里主要对比了主模态的能量。这里用到的体积力是之前算例的十分之一，这是因为在上游扰动非常弱，并不需要太强的体积力。体积力过强反而会污染干净的边界层。控制起始于$x_{start}=358$的算例中的主模态能量要远远小于控制起始于$x_{start}=400$算例中的主模态能量，这是因为前者的控制区域更靠近中性点$x=134$，控制的区域边界层内本身有的扰动较弱，所以控制效率较高。读者可以回忆之前敏感性分析的结果，不论是基于LST的敏感性分析还是基于PSE的敏感性分析，都指出在失稳区域，越上游控制越有效。这两个算例的结果对比符合之前敏感性分析给出的结论。图\ref{f:streamforce2}对比了主模态流向扰动速度在控制区域的变化。这里横坐标是距控制起始位置的距离，也就是$x-x_{\rm start}$。可以看到，在刚刚开始的位置，也就是靠近控制起始点$x_{start}$附近，算例$x_{start}=315$中主模态流向扰动速度下降的最快，也下降的最多。在这一阶段，总的施加于流动上的体积力还不多，所以添加的体积力还很小，满足小扰动假设。因此敏感性分析的结论依然成立，也就是控制越靠上游，效果越好。但是在$x_{start}+18.7$之后，$x_{start}=315$算例的结果与另外两个算例的结果分道扬镳，其主模态不在是减弱，而是开始增长。这就是因为体积力引入的新的扰动已经盖过了原有的扰动，并开始主导失稳过程。需要说明的是，这里曲线出现了很突然的拐折并不是计算的问题，而是因为图中展示的主模态流向扰动速度在横截面上的最大值，当最大值从一个空间位置跳变到另一个空间位置，就会出现导数的不连续。从上面的结果对比，可以做出结论——适当的流向控制位置非常关键。
 
 对于Case2，本文也做了无控制的线性稳定性分析，非线性抛物化扰动方程的计算寻找特征模态，并用之前推导出来的敏感性方程做了敏感性分析。但由于结果与Case1的结果非常类似，这里便不再展示。唯一需要提及的是这一次主导转捩的模态的展向波数$\beta$变成了0.2。这里重点研究一下不同展向电压的激励，对控制效果的影响。在这个算例中，边界层外的展向速度是签一个算例的两倍，这就意味着此算例需要更强的体积力来控制。在之前算例中过强的激励电压，9kV和10kV都有了用武之地。图\ref{f:voltage}对比了不同激励电压下各阶模态能量的变化。这里依然是选取了最佳的展向控制位置的结果。控制的流向区域从500到500，在图中用两个黑色的大圆点标识出来。绿、蓝、红分别是8、 9、 10kV电压的控制结果。这三个电压在静止的流场中分别可以吹出来最大速度1.7、 2.8、 3.8m/s的射流。之所以选这三个电压是因为在Kriegseis等人\cite{kriegseis2013velocity}的实验中，只测了8、 9、 10、 11、 12kV五个电压的等离子体分布，而最后两个电压太高，会在边界层中引入额外的扰动，所以这里只对比了前三个。从\ref{f:voltage}中可以看到，在控制区域的前半段，也就是$x = 530$之前，三个算例中的扰动能量都受到了抑制，比无控制的结果的（图中的黑线）低。但是在10kV的算例中，扰动在控制区域的后半段开始大幅的增长，尤其是(0,0)和(0,2)模态，甚至超过了主模态的能量。前人在用DBD控制横流的DNS结果\cite{dorr2016}中也提到了过强的体积力会产生有害于流动稳定的涡，从而使转捩提前。因此，在这个工况下，中等的电压强度——9kV，是最佳的选择。
 
