--- a/data/chap03.tex
+++ b/data/chap03.tex
@@ -302,9 +302,9 @@
   \caption{激发器位于不同的流向位置控制效果对比。横轴为据控制起始位置$x_{\rm start}$的距离，纵轴为控制后主模态幅值与无控制主模态幅值之差}\label{f:streamforce2}
 \end{figure}
 
-接下来进行等离子体激发器流向位置效应的研究。需要提及的是，在每一个流向位置，本文都测试了诸多展向控制位置，并且将其中最好的一个算例选取出来进行比较。研究方法依然选用的是NPSE。图\ref{f:streamforce}对比了控制开始于$x_{\rm start}=315, 358, 400$位置处的控制效果。这里每一个控制算例的展流向激励长度，也就是等离子体在流向延伸的长度是相同的。由于转捩主要还是由主模态主导的，这里主要对比了主模态的能量。这里用到的体积力是之前算例的十分之一，这是因为在上游扰动非常弱，并不需要太强的体积力。体积力过强反而会污染干净的边界层。控制起始于$x_{start}=358$的算例中的主模态能量要远远小于控制起始于$x_{start}=400$算例中的主模态能量，这是因为前者的控制区域更靠近中性点$x=134$，控制的区域边界层内本身有的扰动较弱，所以控制效率较高。读者可以回忆之前敏感性分析的结果，不论是基于LST的敏感性分析还是基于PSE的敏感性分析，都指出在失稳区域，越上游控制越有效。这两个算例的结果对比符合之前敏感性分析给出的结论。图\ref{f:streamforce2}对比了主模态流向扰动速度在控制区域的变化。这里横坐标是距控制起始位置的距离，也就是$x-x_{\rm start}$。可以看到，在刚刚开始的位置，也就是靠近控制起始点$x_{start}$附近，算例$x_{start}=315$中主模态流向扰动速度下降的最快，也下降的最多。在这一阶段，总的施加于流动上的体积力还不多，所以添加的体积力还很小，满足小扰动假设。因此敏感性分析的结论依然成立，也就是控制越靠上游，效果越好。但是在$x_{start}+18.7$之后，$x_{start}=315$算例的结果与另外两个算例的结果分道扬镳，其主模态不在是减弱，而是开始增长。这就是因为体积力引入的新的扰动已经盖过了原有的扰动，并开始主导失稳过程。需要说明的是，这里曲线出现了很突然的拐折并不是计算的问题，而是因为图中展示的主模态流向扰动速度在横截面上的最大值，当最大值从一个空间位置跳变到另一个空间位置，就会出现导数的不连续。从上面的结果对比，可以做出结论——适当的流向控制位置非常关键。
+接下来进行等离子体激发器流向位置效应的研究。需要提及的是，在每一个流向位置，本文都测试了诸多展向控制位置，并且将其中最好的一个算例选取出来进行比较。研究方法依然选用的是NPSE。图\ref{f:streamforce}对比了控制开始于$x_{\rm start}=315, 358, 400$位置处的控制效果。这里每一个控制算例的展流向激励长度，也就是等离子体在流向延伸的长度是相同的。图中曲线均为主模态的能量。这里用到的体积力是之前算例的十分之一，这是因为在上游扰动非常弱，并不需要太强的体积力。体积力过强反而会污染干净的边界层。控制起始于$x_{start}=358$的算例中的主模态能量要远远小于控制起始于$x_{start}=400$算例中的主模态能量，这是因为前者的控制区域更靠近中性点$x=134$，控制的区域边界层内本身有的扰动较弱，所以控制效率较高。读者可以回忆之前敏感性分析的结果，不论是基于LST的敏感性分析还是基于PSE的敏感性分析，都指出在失稳区域，越向上游控制越有效。这两个算例的结果对比符合之前敏感性分析给出的结论。图\ref{f:streamforce2}对比了主模态流向扰动速度在控制区域的变化。这里横坐标是距控制起始位置的距离，也就是$x-x_{\rm start}$。可以看到，在刚刚开始的位置，也就是靠近控制起始点$x_{start}$附近，算例$x_{start}=315$中主模态流向扰动速度下降的最快，也下降的最多。在这一阶段，总的施加于流动上的体积力还不多，所以添加的体积力还很小，满足小扰动假设。因此敏感性分析的结论依然成立，也就是控制越靠上游，效果越好。但是在$x_{start}+18.7$之后，$x_{start}=315$算例的结果与另外两个算例的结果分道扬镳，其主模态开始增长。这就是因为体积力引入的新的扰动已经盖过了原有的扰动，并开始主导失稳过程。需要说明的是，这里曲线出现了很突然的拐折并不是计算的问题，而是因为图中展示的主模态流向扰动速度在横截面上的最大值。当最大值从一个空间位置跳变到另一个空间位置，就会出现导数的不连续的情况。从上面的结果中可以发现，适当的流向控制位置非常关键。
 
-对于Case2，本文也做了无控制的线性稳定性分析，非线性抛物化扰动方程的计算寻找特征模态，并用之前推导出来的敏感性方程做了敏感性分析。但由于结果与Case1的结果非常类似，这里便不再展示。唯一需要提及的是这一次主导转捩的模态的展向波数$\beta$变成了0.2。这里重点研究一下不同展向电压的激励，对控制效果的影响。在这个算例中，边界层外的展向速度是签一个算例的两倍，这就意味着此算例需要更强的体积力来控制。在之前算例中过强的激励电压，9kV和10kV都有了用武之地。图\ref{f:voltage}对比了不同激励电压下各阶模态能量的变化。这里依然是选取了最佳的展向控制位置的结果。控制的流向区域从500到500，在图中用两个黑色的大圆点标识出来。绿、蓝、红分别是8、 9、 10kV电压的控制结果。这三个电压在静止的流场中分别可以吹出来最大速度1.7、 2.8、 3.8m/s的射流。之所以选这三个电压是因为在Kriegseis等人\cite{kriegseis2013velocity}的实验中，只测了8、 9、 10、 11、 12kV五个电压的等离子体分布，而最后两个电压太高，会在边界层中引入额外的扰动，所以这里只对比了前三个。从\ref{f:voltage}中可以看到，在控制区域的前半段，也就是$x = 530$之前，三个算例中的扰动能量都受到了抑制，比无控制的结果的（图中的黑线）低。但是在10kV的算例中，扰动在控制区域的后半段开始大幅的增长，尤其是(0,0)和(0,2)模态，甚至超过了主模态的能量。前人在用DBD控制横流的DNS结果\cite{dorr2016}中也提到了过强的体积力会产生有害于流动稳定的涡，从而使转捩提前。因此，在这个工况下，中等的电压强度——9kV，是最佳的选择。
+对于Case2，本文也做了无控制的线性稳定性分析，非线性抛物化扰动方程的计算寻找特征模态，并用之前推导出来的敏感性方程做了敏感性分析。但由于结果与Case1的结果非常类似，这里不再展示。唯一需要提及的是这一次主导转捩的模态的展向波数$\beta$变成了0.2。这里重点研究一下不同展向电压的激励，对控制效果的影响。在这个算例中，边界层外的展向速度是前一个算例的两倍，这就意味着此算例需要更强的体积力来控制。在之前算例中过强的激励电压（9kV和10kV）都有可以用来控制转捩了。图\ref{f:voltage}对比了不同激励电压下各阶模态能量的变化。这里依然是选取了最佳的展向控制位置的结果。控制的流向区域从450到500，在图中用两个黑色的大圆点标识出来。绿、蓝、红分别是8、 9、 10kV电压的控制结果。这三个电压在静止的流场中分别可以吹出来最大速度1.7、 2.8、 3.8m/s的射流。之所以选这三个电压是因为在Kriegseis等人\cite{kriegseis2013velocity}的实验中，只测了8、 9、 10、 11、 12kV五个电压的等离子体分布，而最后两个电压太高，会在边界层中引入额外的扰动，所以这里只对比了前三个。从\ref{f:voltage}中可以看到，在控制区域的前半段，也就是$x = 530$之前，三个算例中的扰动能量都受到了抑制，比无控制的结果（图中的黑线）低。但是在10kV的算例中，扰动在控制区域的后半段开始大幅的增长，尤其是(0,0)和(0,2)模态，甚至超过了主模态的能量。前人在用DBD控制横流的DNS结果\cite{dorr2016}中也提到了过强的体积力会产生有害于流动稳定的涡，从而使转捩提前。因此，在这个工况下，中等的电压强度——9kV，是最佳的选择。
 
 \begin{figure}
   \centering
@@ -314,4 +314,4 @@
 \end{figure}
 
 \section{本章小结}
-在这一章中，本文对典型的三维边界层流动——后掠Hiemenz流动——的失稳过程进行了敏感性分析，并提出了一种基于直接抑制主模态的等离子体谐波控制方案。敏感性分析的结果指出，在低速条带下方，也就是横流涡下方偏下扫的位置处添加正方向的体积力可以抑制扰动的发展，后续的NPSE计算也验证了这一结果。之后在等离子体激发器的流向位置效应和电压效应的研究中，发现所添加体积力的强度一点要与当地所存在的扰动强度相当。太弱起不到控制的效果，太强会引入新的扰动主导失稳过程，反而会促进转捩。
+在这一章中，本文对后掠Hiemenz流动的失稳过程进行了敏感性分析，并提出了一种采用DBD激发器直接抑制主模态的谐波控制方案。敏感性分析的结果指出，在低速条带下方，也就是横流涡下方偏下扫的位置处添加正方向的体积力可以抑制扰动的发展，后续的NPSE计算也验证了这一结果。之后在等离子体激发器的流向位置效应和电压效应的研究中，发现所添加体积力的强度一定要与当地所存在的扰动强度相当。太弱起不到控制的效果，太强会引入新的扰动主导失稳过程，反而会促进转捩。
