--- a/data/chap06.tex
+++ b/data/chap06.tex
@@ -5,7 +5,7 @@
 
 在真实的后掠翼工况中，本文先测试了之前在后掠Hiemenz流动中使用的谐波激励控制方法。然而这种方法对激发器展向位置精度要求非常高，导致其并不鲁棒。受之前研究得到的压力梯度效应对转捩影响的启发，提出采用等离子体激发器抑制横流的方法推迟转捩。由于控制中在每个展向周期放置两个激发器，所以这一控制方法又被叫做亚谐波激励。本文测试了将激发器放置在不同展向、流向位置，发现这一布置都能起到推迟转捩的效果。甚至在一个非设计工况，都成功的降低了边界层内扰动的能量。通过一个反向控制算例，本文揭示了降低了横流强度的基本流修正模态在控制中起主导作用。亚谐波激励控制实际是靠DBD产生的体积力削弱了横流，其激发出的亚谐模态仅仅是附带效果。并且，在这种压力梯度变化的翼型上，这一亚谐模态（本例中的展向波长2.5mm模态）是稳定模态。这也保证了新激励出的模态并不会成为新的主导模态。这一亚谐激励控制在后掠Hiemenz流动中的应用效果就不如在后掠翼流动中（未在文中展示），因为其高阶谐波在下游都会增长，一旦被激发出来就有可能成为新的主导模态。
 
-最后，本文对$Re_\tau=180$的充分发展槽道湍流，提出了定常激励和周期激励两种采用DBD等离子体激发器的控制方案。在定常激励控制方案中，两个向相反方向吹起的激发器在槽道中产生了与槽道大约同一尺度的流向涡。这个流向涡在槽道中部将流体快速的吸到壁面，然后又在计算的周期边界处，将流体向上抛回高速区。在向下吸的加速区，流动发生了再层流化，使得壁面附近整体的湍动能降低，从而降低的湍流摩阻。在这种控制方案中，产生的流向涡的强度至关重要，太强的流向涡反而会使得阻力增加。在周期激励方案中，激发器阵列被用于产生时而向左时而向右的展向周期振动。从分相位的条件平均结果来看，由于体积力在激励的前半个周期内会在流向涡下部产生与涡诱导速度方向相反的展向速度，这使得流向涡的生成受到阻碍。采用展向均匀的体积力激励会比采用有展向分布的DBD产生的体积力效果好。在这一控制方案中，激发器的密度是一个关键参数。密集布置的激发器可以降低展向不均匀性，从而取得较好的控制效果，而过稀的激发器布置反而会增加阻力。定常激励和周期激励控制方案均能起到大约9\%的减阻效果。
+最后，本文对$Re_\tau=180$的充分发展槽道湍流，提出了定常激励和周期激励两种采用DBD等离子体激发器的控制方案。在定常激励控制方案中，两个向相反方向吹气的激发器在槽道中产生了与槽道大约同一尺度的流向涡。这个流向涡在槽道中部将流体快速的吸到壁面，然后又在计算的周期边界处，将流体向上抛回高速区。在向下吸的加速区，流动发生了再层流化，使得壁面附近整体的湍动能降低，从而降低的湍流摩阻。在这种控制方案中，产生的流向涡的强度至关重要，太强的流向涡反而会使得阻力增加。在周期激励方案中，激发器阵列被用于产生时而向左时而向右的展向周期振动。从分相位的条件平均结果来看，由于体积力在激励的前半个周期内会在流向涡下部产生与涡诱导速度方向相反的展向速度，这使得流向涡的生成受到阻碍。采用展向均匀的体积力激励会比采用有展向分布的DBD产生的体积力效果好。在这一控制方案中，激发器的密度是一个关键参数。密集布置的激发器可以降低展向不均匀性，从而取得较好的控制效果，而过稀的激发器布置反而会增加阻力。定常激励和周期激励控制方案均能起到大约9\%的减阻效果。
 
 本文的工作还有一些不足之处，在后续的工作中可以逐渐改进和完善。后续需要做的工作有：
 \begin{enumerate}
