--- a/data/chap05.tex
+++ b/data/chap05.tex
@@ -237,19 +237,19 @@
 \begin{figure}[htb]
   \centering
   \subcaptionbox{正向激励时体积力分布}[0.8\textwidth]
-  {\includegraphics[width=0.8\textwidth]{ch5/6DBD1.JPG}}
+  {\includegraphics[width=0.8\textwidth]{ch5/6DBD1_new.jpg}}
   \\\bigskip
   \subcaptionbox{反向激励时体积力分布}[0.83\textwidth]
-  {\includegraphics[width=0.83\textwidth]{ch5/6DBD2.JPG}}
+  {\includegraphics[width=0.83\textwidth]{ch5/6DBD2_new.jpg}}
   \caption{6DBD算例激励示意图}\label{f:6dbd_force}
 \end{figure}
 \begin{figure}[htb]
   \centering
   \subcaptionbox{正向激励时体积力分布\label{f:16dbd_forcea}}[\textwidth]
-  {\includegraphics[width=\textwidth]{ch5/16DBD1.jpg}}
+  {\includegraphics[width=\textwidth]{ch5/16dbd1_new.jpg}}
   \\\bigskip
   \subcaptionbox{反向激励时体积力分布\label{f:16dbd_forceb}}[\textwidth]
-  {\includegraphics[width=\textwidth]{ch5/16DBD2.jpg}}
+  {\includegraphics[width=\textwidth]{ch5/16dbd2_new.jpg}}
   \caption{16DBD算例激励示意图}\label{f:16dbd_force}
 \end{figure}
 %\begin{figure}
