--- a/shuji.tex
+++ b/shuji.tex
@@ -6,19 +6,19 @@
 
 \begin{document}
 \thusetup{
-  cauthor={薛瑞尼},
-  ctitle={没有英文的中文标题}
+  cauthor={王哲夫},
+  ctitle={介质阻挡放电等离子体激发器在湍流减阻中的应用研究}
 }
 
 \shuji % 使用默认标题和默认作者
 
-\shuji[使用默认作者的标题]
+%\shuji[使用默认作者的标题]
 
-\shuji[同时修改标题和作者的标题][尼瑞薛]
+%\shuji[同时修改标题和作者的标题][尼瑞薛]
 
-\ifxetex
-  \shuji[清华大学学位 \raisebox{-5pt}{\LaTeX} 论文模板 \raisebox{-5pt}{v\version} 样例]
-\else
-  \shuji[清华大学学位 \raisebox{8pt}{\LaTeX} 论文模板 \raisebox{8pt}{v\version} 样例]
-\fi
+%\ifxetex
+%  \shuji[清华大学学位 \raisebox{-5pt}{\LaTeX} 论文模板 \raisebox{-5pt}{v\version} 样例]
+%\else
+%  \shuji[清华大学学位 \raisebox{8pt}{\LaTeX} 论文模板 \raisebox{8pt}{v\version} 样例]
+%\fi
 \end{document}
