modify some figures

--- a/data/chap03.tex
+++ b/data/chap03.tex
@@ -43,7 +43,7 @@
     \caption{Case1}\label{modesenergycase3}
   \end{subfigure}
   \begin{subfigure}{0.48\linewidth}
-    \includegraphics[width=\linewidth]{ch3/growthratecase2.eps}
+    \includegraphics[width=\linewidth]{ch3/growthratecase2_new.jpeg}
     \caption{Case2}\label{modesenergycase1}
   \end{subfigure}
   %\includegraphics[width=0.6\textwidth]{ch3/growthrate2.eps}\\
@@ -72,19 +72,19 @@
 \begin{figure}[htb]
   \centering
   \subcaptionbox{$u^*$分布云图}[0.55\textwidth]
-  {\includegraphics[width=0.55\textwidth]{ch3/absau1.jpg}}
+  {\includegraphics[height=4.5cm]{ch3/absau1.jpg}}
   \subcaptionbox{$u^*$不同截面剖面}[0.43\textwidth]
-  {\includegraphics[width=0.43\textwidth]{ch3/absau.jpg}}
+  {\includegraphics[height=4.5cm]{ch3/absau.jpg}}
   \\\bigskip
   \subcaptionbox{$v^*$分布云图}[0.55\textwidth]
-  {\includegraphics[width=0.55\textwidth]{ch3/absav1.jpg}}
+  {\includegraphics[height=4.5cm]{ch3/absav1.jpg}}
   \subcaptionbox{$v^*$不同截面剖面}[0.43\textwidth]
-  {\includegraphics[width=0.43\textwidth]{ch3/absav.jpg}}
+  {\includegraphics[height=4.5cm]{ch3/absav.jpg}}
   \\\bigskip
   \subcaptionbox{$w^*$分布云图}[0.55\textwidth]
-  {\includegraphics[width=0.55\textwidth]{ch3/absaw1.jpg}}
+  {\includegraphics[height=4.5cm]{ch3/absaw1.jpg}}
   \subcaptionbox{$w^*$不同截面剖面}[0.43\textwidth]
-  {\includegraphics[width=0.43\textwidth]{ch3/absaw.jpg}}
+  {\includegraphics[height=4.5cm]{ch3/absaw.jpg}}
   \caption{LST伴随向量}\label{f:LST_ADJOINT}
 \end{figure}
 从伴随速度的分布中我们可以看到，展向和流向的伴随速度始终大于法向的伴随速度。这表明，该流动对于展向和法向的激励更加敏感，而对于法向的激励则不是那么敏感。另外，随着扰动延流向发展，其对展向的激励越来越敏感，而对流向则越来越不敏感。从物理上这也很好解释。在靠近前缘的位置，基本流的流向分量很弱，所以只需要很小的扰动就能够对其产生很大的影响。之后随着流向的推进发展，流向的基本流越来越强，对其产生扰动需要的力量也就越来越大，从而敏感性也就越来越低。
@@ -110,7 +110,7 @@
 得到不同的流向位置最大增长率减小值之后，我们对比了流向敏感性，如图\ref{f:senVSstr}。我们可以看到，在进入失稳区之后，相同大小的体积力对横流模态的影响越向下游越小。然而这一结论是建立在线性、单一模态的分析假设下的，并且要求体积力相对于自然扰动模态要非常小。在中性曲线附近，自然扰动非常小，外加体积力无法看成是小量，这一分析也就不再适用。
 \begin{figure}
   \centering
-  \includegraphics[width=0.5\textwidth]{ch3/senVSstr.jpg}
+  \includegraphics[width=0.8\textwidth]{ch3/senVSstr.jpg}
   \caption{敏感性随流向位置变化}\label{f:senVSstr}
 \end{figure}
 
@@ -298,7 +298,7 @@
 \begin{figure}
   \centering
   % Requires \usepackage{graphicx}
-  \includegraphics[width=0.6\linewidth]{ch3/compare160427-vmax.eps}\\
+  \includegraphics[width=0.6\linewidth]{ch3/compare160427-vmax.jpg}\\
   \caption{激发器位于不同的流向位置控制效果对比。横轴为据控制起始位置$x_{\rm start}$的距离，纵轴为控制后主模态幅值与无控制主模态幅值之差}\label{f:streamforce2}
 \end{figure}
 
