--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -569,7 +569,6 @@
    ISSN = {1364-503X (Print)
 1364-503X (Linking)},
    DOI = {10.1098/rsta.2010.0368},
-   url = {http://www.ncbi.nlm.nih.gov/pubmed/21382818},
    year = {2011},
    type = {Journal Article}
 }
@@ -1154,7 +1153,8 @@ type = {Conference Proceedings},
   title={应用等离子体物理学},
   author={张谷令 and 敖玲 and 胡建芳 and 刘元富},
   year={2008},
-  publisher={北京: 首都师范大学出版社}
+  address={北京},
+  publisher={首都师范大学出版社}
 }
 @article{niewanshang2012,
   title={介质阻挡放电等离子体流动控制研究进展},
@@ -1242,7 +1242,6 @@ type = {Conference Proceedings},
    pages = {2721-2733},
    ISSN = {0001-1452},
    DOI = {10.2514/1.J054826},
-   url = {https://doi.org/10.2514/1.J054826},
    year = {2016},
    type = {Journal Article}
 }
@@ -1256,7 +1255,6 @@ type = {Conference Proceedings},
    abstract = {A forward-facing step (FFS) immersed in a subsonic boundary layer is studied through a high-order flux reconstruction (FR) method to highlight the flow transition induced by the step. The step height is a third of the local boundary-layer thickness. The Reynolds number based on the step height is 720. Inlet disturbances are introduced giving rise to streamwise vortices upstream of the step. It is observed that these small-scale streamwise structures interact with the step and hairpin vortices are quickly developed after the step leading to flow transition in the boundary layer.},
    ISSN = {1869-1927},
    DOI = {10.1007/s11433-017-9069-3},
-   url = {https://doi.org/10.1007/s11433-017-9069-3},
    year = {2017},
    type = {Journal Article}
 }
@@ -1399,7 +1397,6 @@ type = {Conference Proceedings},
    number = {1},
    pages = {015105},
    ISSN = {1070-6631},
-   url = {https://aip.scitation.org/doi/pdf/10.1063/1.1825451},
    year = {2005},
    type = {Journal Article}
 }
@@ -1408,6 +1405,8 @@ type = {Conference Proceedings},
    title = {DBD等离子体诱导涡结构控制附面层流动研究},
    university = {哈尔滨工业大学},
    year = {2017},
+   address={哈尔滨},
+  publisher={哈尔滨工业大学},
    type = {Thesis}
 }
 @article{Enloe2004,
@@ -1492,7 +1491,6 @@ type = {Conference Proceedings},
    number = {11},
    pages = {113301},
    ISSN = {0021-8979},
-   url = {https://aip.scitation.org/doi/pdf/10.1063/1.3664695},
    year = {2011},
    type = {Journal Article}
 }
@@ -1555,9 +1553,6 @@ type = {Conference Proceedings},
    volume = {119},
    pages = {26-36},
    ISSN = {0045-7930},
-   DOI = {https://doi.org/10.1016/j.compfluid.2015.07.001},
-   url = {http://www.sciencedirect.com/science/article/pii/S0045793015002273
-https://www.sciencedirect.com/science/article/pii/S0045793015002273?via%3Dihub},
    year = {2015},
    type = {Journal Article}
 }
@@ -1569,8 +1564,6 @@ https://www.sciencedirect.com/science/article/pii/S0045793015002273?via%3Dihub},
    number = {2},
    pages = {411-425},
    ISSN = {0001-1452},
-   DOI = {10.2514/1.J050755},
-   url = {https://doi.org/10.2514/1.J050755},
    year = {2011},
    type = {Journal Article}
 }
@@ -1656,7 +1649,7 @@ https://www.sciencedirect.com/science/article/pii/S0045793015002273?via%3Dihub},
 }
 @article{wang2013Recent,
    author = {Wang, Jin-Jun and Choi, Kwing-So and Feng, Li-Hao and Jukes, Timothy N. and Whalley, Richard D.},
-   title = {Recent developments in DBD plasma flow control},
+   title = {Recent developments in {DBD} plasma flow control},
    journal = {Progress in Aerospace Sciences},
    volume = {62},
    pages = {52-78},
@@ -1664,9 +1657,6 @@ https://www.sciencedirect.com/science/article/pii/S0045793015002273?via%3Dihub},
 Flow control
 Aerodynamic control},
    ISSN = {0376-0421},
-   DOI = {https://doi.org/10.1016/j.paerosci.2013.05.003},
-   url = {http://www.sciencedirect.com/science/article/pii/S0376042113000535
-https://www.sciencedirect.com/science/article/pii/S0376042113000535?via%3Dihub},
    year = {2013},
    type = {Journal Article}
 }
@@ -1698,9 +1688,6 @@ Direct numerical simulation
 Skin-friction drag reduction
 Turbulence},
    ISSN = {0142-727X},
-   DOI = {https://doi.org/10.1016/j.ijheatfluidflow.2017.05.013},
-   url = {http://www.sciencedirect.com/science/article/pii/S0142727X17300243
-https://www.sciencedirect.com/science/article/pii/S0142727X17300243?via%3Dihub},
    year = {2017},
    type = {Journal Article}
 }
@@ -1712,7 +1699,6 @@ https://www.sciencedirect.com/science/article/pii/S0142727X17300243?via%3Dihub},
    number = {48},
    pages = {485202},
    ISSN = {0022-3727},
-   url = {http://iopscience.iop.org/article/10.1088/0022-3727/45/48/485202/pdf},
    year = {2012},
    type = {Journal Article}
 }
@@ -1722,8 +1708,6 @@ https://www.sciencedirect.com/science/article/pii/S0142727X17300243?via%3Dihub},
    journal = {International Journal of Heat and Fluid Flow},
    volume = {61},
    pages = {158-173},
-   ISSN = {0142-727X},
-   DOI = {https://doi.org/10.1016/j.ijheatfluidflow.2016.04.009},
    year = {2016},
    type = {Journal Article}
 }
@@ -1747,8 +1731,6 @@ https://www.sciencedirect.com/science/article/pii/S0142727X17300243?via%3Dihub},
    number = {2},
    pages = {22},
    ISSN = {1432-1114},
-   DOI = {10.1007/s00348-015-2107-3},
-   url = {https://doi.org/10.1007/s00348-015-2107-3},
    year = {2016},
    type = {Journal Article}
 }
@@ -1830,12 +1812,10 @@ https://www.sciencedirect.com/science/article/pii/S0142727X17300243?via%3Dihub},
 }
 @article{Simon2018,
    author = {Simon, Bernhard and Markus, Daniel and Tropea, Cameron and Grundmann, Sven},
-   title = {Cancellation of Tollmien–Schlichting Waves in Direct Vicinity of a Plasma Actuator},
+   title = {Cancellation of {Tollmien–Schlichting} Waves in Direct Vicinity of a Plasma Actuator},
    journal = {AIAA Journal},
    pages = {1-10},
    ISSN = {0001-1452},
-   DOI = {10.2514/1.J056265},
-   url = {https://doi.org/10.2514/1.J056265},
    year = {2018},
    type = {Journal Article}
 }
@@ -1855,8 +1835,6 @@ England
 Philos Trans A Math Phys Eng Sci. 2011 Apr 13;369(1940):1443-58. doi: 10.1098/rsta.2010.0362.},
    ISSN = {1364-503X (Print)
 1364-503X (Linking)},
-   DOI = {10.1098/rsta.2010.0362},
-   url = {http://www.ncbi.nlm.nih.gov/pubmed/21382824},
    year = {2011},
    type = {Journal Article}
 }
@@ -1894,8 +1872,6 @@ Philos Trans A Math Phys Eng Sci. 2011 Apr 13;369(1940):1443-58. doi: 10.1098/rs
    number = {2},
    pages = {173-191},
    ISSN = {0376-0421},
-   DOI = {https://doi.org/10.1016/S0376-0421(00)00002-6},
-   url = {http://www.sciencedirect.com/science/article/pii/S0376042100000026},
    year = {2000},
    type = {Journal Article}
 }
@@ -1930,7 +1906,6 @@ Philos Trans A Math Phys Eng Sci. 2011 Apr 13;369(1940):1443-58. doi: 10.1098/rs
    number = {10},
    pages = {2371-2377},
    ISSN = {0899-8213},
-   url = {http://scitation.aip.org/docserver/fulltext/aip/journal/pofa/3/10/1.858176.pdf?expires=1466770305&id=id&accname=2110148&checksum=3A96BAB95D4B3390F9BD53ECA3E2E7C6},
    year = {1991},
    type = {Journal Article}
 }
@@ -2011,7 +1986,6 @@ Philos Trans A Math Phys Eng Sci. 2011 Apr 13;369(1940):1443-58. doi: 10.1098/rs
    pages = {57-108},
    ISSN = {0022-1120},
    DOI = {10.1017/S002211200100667X},
-   url = {https://www.cambridge.org/core/article/coherent-structure-generation-in-nearwall-turbulence/F90A8C43AB7DFEAAB4CB4115893255DA},
    year = {2002},
    type = {Journal Article}
 }
@@ -2033,7 +2007,6 @@ Philos Trans A Math Phys Eng Sci. 2011 Apr 13;369(1940):1443-58. doi: 10.1098/rs
    number = {1940},
    pages = {1412-1427},
    ISSN = {1364-503X},
-   url = {http://rsta.royalsocietypublishing.org/content/roypta/369/1940/1412.full.pdf},
    year = {2011},
    type = {Journal Article}
 }
@@ -2148,7 +2121,6 @@ Philos Trans A Math Phys Eng Sci. 2011 Apr 13;369(1940):1443-58. doi: 10.1098/rs
    number = {21},
    pages = {8161-8186},
    ISSN = {0021-9991},
-   url = {https://www.sciencedirect.com/science/article/pii/S0021999109004239?via%3Dihub},
    year = {2009},
    type = {Journal Article}
 }
@@ -2160,7 +2132,6 @@ Philos Trans A Math Phys Eng Sci. 2011 Apr 13;369(1940):1443-58. doi: 10.1098/rs
    number = {1},
    pages = {50-72},
    ISSN = {0885-7474},
-   url = {https://link.springer.com/content/pdf/10.1007%2Fs10915-010-9420-z.pdf},
    year = {2011},
    type = {Journal Article}
 }
@@ -2172,7 +2143,6 @@ Philos Trans A Math Phys Eng Sci. 2011 Apr 13;369(1940):1443-58. doi: 10.1098/rs
    number = {2},
    pages = {434-445},
    ISSN = {0885-7474},
-   url = {https://link.springer.com/content/pdf/10.1007%2Fs10915-011-9490-6.pdf},
    year = {2012},
    type = {Journal Article}
 }
@@ -2203,11 +2173,14 @@ Philos Trans A Math Phys Eng Sci. 2011 Apr 13;369(1940):1443-58. doi: 10.1098/rs
            title = {基于通量重构方法的高精度湍流模拟研究},
           school = {清华大学},
           author = {朱辉},
+		  address = {北京},
+		  publisher = {清华大学},
         keywords = {通量重构方法,湍流模拟,隐式大涡模拟,壁面模型,前台阶流动},
 }
 @article{wang2018,
    author = {Wang, Zhefu and Wang, Liang and Wang, Qiangyang and Xu,Shengjin and Fu, Song},
    title = {Control of crossflow instability over a swept wing using dielectric-barrier-discharge plasma actuators},
    journal = {International Journal of Heat and Fluid Flow},
+   year={2018},
    type = {Journal Article}
 }
