--- a/data/cover.tex
+++ b/data/cover.tex
@@ -14,7 +14,7 @@
   %=========
   % 中文信息
   %=========
-  ctitle={介质阻挡放电等离子体激发器在湍流减阻中的应用研究},
+  ctitle={介质阻挡放电等离子体激发器在流动减阻中的应用研究},
   cdegree={工学博士},
   cdepartment={航天航空学院},
   cmajor={力学},
@@ -36,7 +36,7 @@
   %=========
   % 英文信息
   %=========
-  etitle={Study of the application of Dielectric-Barrier-Discharge plasma actuators in turbulent drag reduction},
+  etitle={Study of drag reduction with Dielectric-Barrier-Discharge plasma actuators},
   % 这块比较复杂，需要分情况讨论：
   % 1. 学术型硕士
   %    edegree：必须为Master of Arts或Master of Science（注意大小写）
@@ -77,9 +77,9 @@
 
   本文的创新点主要有：
   \begin{itemize}
-    \item 建立了三维边界层敏感性分析方法，推导了相关公式；
-    \item 将DBD亚谐波激励控制方法应用于真实后掠翼流动；
-    \item 提出了定常激励和周期激励湍流减阻控制方案，并采用条件平均技术进行了机理分析。
+    \item 通过敏感性分析，发现了谐波激励控制方案中较优的激发器位置；
+    \item 将DBD亚谐波激励控制方法应用于真实后掠翼流动，成功推迟转捩；
+    \item 提出了定常激励和周期激励的壁湍流减阻控制方案，采用条件平均技术揭示了其控制机理。
   \end{itemize}
 \end{cabstract}
 
@@ -88,9 +88,9 @@
 
 \begin{eabstract}
    The potential use of Dielectric-Barrier-Discharge (DBD) plasma actuators for drag reduction of a passenger aircraft is studied in this paper. Two approaches are proposed to accomplish this goal: laminar-turbulent transition delay on the wing and full turbulent flow drag reduction on the fuselage.
-   
+
    Modern airplanes always use swept wings. The boundary layer over these wings are three dimensional and usually subject to crossflow instability. Sensitivity of the boundary layer to body force induced by DBD actuators is analysed through solving the adjoint equations. It is found that force at the bottom of the crossflow vortex with opposite direction of local flow can hinder the growth of the disturbance energy. Inspired by this result, the harmonic control method, which put one actuator per fundamental wavelength, is come up with. However, this control method is not robust. Once the spanwise locations of actuators are incorrect, the transition will be promoted. The study of pressure gradient effect points out the attenuation of instability modes always links to the decrease of crossflow velocity. Thus, the subharmonic control with two actuators per fundamental wavelength is proposed to decline the crossflow velocity. This control method is more robust and it stabilizes the boundary layer with several different streamwise and spanwise actuator locations. A reverse control case reveals that the mean flow distortion mode which reduces the crossflow velocity plays an important role in this control method.
-   
+
    Two control methods with steady actuation and periodical actuation are proposed to control full turbulence and they are tested in a turbulent channel flow. For the steady control method, two actuators mounted on the wall with different directions. They generate two large vortices whose scales are comparable to the channel height. These secondary vortices relaminarize flow at the sweep region and reduce the total drag. For the periodical actuation, DBD actuator array is employed to cause the spanwise oscillation near wall. Results of conditional average show this oscillation hinder the regeneration of streamwise vortices. Both control methods reduce nearly 9\% total drag.
 \end{eabstract}
 
