--- a/shuji.tex
+++ b/shuji.tex
@@ -7,7 +7,7 @@
 \begin{document}
 \thusetup{
   cauthor={王哲夫},
-  ctitle={介质阻挡放电等离子体激发器在湍流减阻中的应用研究}
+  ctitle={介质阻挡放电等离子体激发器在减阻中的应用研究}
 }
 
 \shuji % 使用默认标题和默认作者
