modify fig in ch5

--- a/data/chap05.tex
+++ b/data/chap05.tex
@@ -198,9 +198,9 @@
 \begin{figure}
   \centering
   \subcaptionbox{湍动能}[0.49\textwidth]
-    {\includegraphics[width=0.49\textwidth]{ch5/PlasmaWeak/k.jpeg}}
+    {\includegraphics[width=0.49\textwidth]{ch5/PlasmaWeak/k.png}}
   \subcaptionbox{湍动能生成项\label{f:Productionb}}[0.49\textwidth]
-    {\includegraphics[width=0.49\textwidth]{ch5/PlasmaWeak/Production.jpeg}}
+    {\includegraphics[width=0.49\textwidth]{ch5/PlasmaWeak/Production.png}}
   \caption{Plasma（Weak）湍动能和湍动能生成项}\label{f:production}
 \end{figure}
 图\ref{f:production}给出了Plasma（Weak）算例的湍动能与湍动能生成项的分布。这里先重点看图\ref{f:Productionb}给出的湍动能生成项分布。图中白色粗线包围的区域内湍动能生成项为负值。这表明，在DBD将流体吸到壁面附近这一过程中，流体不仅被加速，还产生了在层流化现象。这一现象使得槽道中部贴近壁面处湍动能极低。这同时非常好的印证了图\ref{f:PlasmaWeak_vortexstructure}中流体下扫区涡结构较少这一观察。这里，可以将上壁面近似当成无控制的壁面进行对比观察。可以看到上壁面附近就有一层高湍动能区，几乎平平的铺在整个上壁面上。而下壁面的高湍动能区则集中在流体上扫区，并且极大值位置也略有提升。所以可见，该算例主要是通过二次涡产生的层流化效应降低湍流脉动，其次在上抛区抬高高湍动能区的位置，从而实现减阻。
