--- a/data/chap05.tex
+++ b/data/chap05.tex
@@ -1,5 +1,5 @@
 \chapter{等离子体激发器控制充分发展槽道湍流}
-本章研究应用DBD激发器控制壁湍流的方法。基准算例选取为壁面摩擦尺度雷诺数Re$_\tau=180$(Re$_m=5600$)的湍流槽道。计算程序采用的是王志坚课题组的hpMusic\cite{WangZJ2009,Zhu2016,Zh2017}，时间步长dt=0.00015，用三阶的显式Eular进行时间推进。空间采用4阶精度计算，单元内采用高斯点，每个单元内有$5\times5\times5$个点，三个方向总的自由度数分别为$235\times155\times200$。在后处理的时候，对单元界面上空间位置相同的点进行了平均。平均处理之后用于显示的网格点数与Kim（1987）\cite{Kim1987}文献中的网格相近。计算域大小为$4\pi \times 2\times 2\pi$。$\gamma$=1.4， 气体常数为1.0，普朗特常数Pr = 0.72，粘性系数 $\mu=3.57\times10^{-4}$， Ma=0.1。计算时在流场内添加全场均匀的体积力，使得槽道内的质量平均流速在稳定在1.0。计算的初始条件为抛物线形速度刨面，流速峰值$u_{\rm max} = 1.327$。为了加快转捩，在这个流场上叠加上10个不同流向展向波数的扰动波。初始的密度$\rho=1.0$，压力$p= 31.75$。计算得到的近壁涡结构和条带结构如图\ref{f:nearwallvortex}和\ref{f:nearwallstreak}。其中用于展示涡结构的Q值等值面取了与文献中相同的值（Q=0.5）。涡结构上的颜色采用高度进行渲染。从图中可以清楚的看到近壁区的流向条带，以及这些条带经过发展，抬高之后形成的发卡涡。图\ref{f:nearwallstreak}中的流向脉动速度云图取自$y^+=5$。可以看到本文计算得到的近壁结构基本与文献中的类似。
+本章研究应用DBD激发器控制壁湍流的方法。基准算例选取为壁面摩擦尺度雷诺数Re$_\tau=180$(Re$_m=5600$)的湍流槽道。计算程序采用的是王志坚课题组的hpMusic\cite{WangZJ2009,Zhu2016,Zh2017}，时间步长dt=0.00015，用三阶的显式Euler进行时间推进。空间采用4阶精度计算，单元内采用高斯点，每个单元内有$5\times5\times5$个点，三个方向总的自由度数分别为$235\times155\times200$。在后处理的时候，对单元界面上空间位置相同的点进行了平均。平均处理之后用于显示的网格点数与Kim（1987）\cite{Kim1987}文献中的网格相近。计算域大小为$4\pi \times 2\times 2\pi$。$\gamma$=1.4， 气体常数为1.0，普朗特常数Pr = 0.72，粘性系数 $\mu=3.57\times10^{-4}$， Ma=0.1。计算时在流场内添加全场均匀的体积力，使得槽道内的质量平均流速在稳定在1.0。计算的初始条件为抛物线形速度刨面，流速峰值$u_{\rm max} = 1.327$。为了加快转捩，在这个流场上叠加上10个不同流向展向波数的扰动波。初始的密度$\rho=1.0$，压力$p= 31.75$。计算得到的近壁涡结构和条带结构如图\ref{f:nearwallvortex}和\ref{f:nearwallstreak}。其中用于展示涡结构的Q值等值面取了与文献中相同的值（Q=0.5）。涡结构上的颜色采用高度进行渲染。从图中可以清楚的看到近壁区的流向条带，以及这些条带经过发展，抬高之后形成的发卡涡。图\ref{f:nearwallstreak}中的流向脉动速度云图取自$y^+=5$。可以看到本文计算得到的近壁结构基本与文献中的类似。
 \begin{figure}[htb]
   \centering
   \subcaptionbox{本文计算结果}[0.45\textwidth] %标题的长度，超过则会换行，如下一个小图。
